--- a/index.html
+++ b/index.html
@@ -18,37 +18,35 @@
 </head>
 <body>
   <h1><strong>Temple High Senior's Pictures</strong></h1>
-    <p><strong> Just CLICK on the year you graduated</strong></p><br><br> 
+    <p><strong> Just CLICK on the year you graduated</strong></p><br> 
     
      <button id ="myId" onclick="playVid()" type="button"><strong>Play 1969</strong></button>
-     <button id ="myId" onclick="pauseVid()" type="button"><strong>Pause Video (1969)</strong></button><br> 
-     <br><br>   
-    <video poster = "headerPic.jpg" id="myVideo" width="320" height="176" controls>
-     <source src="D:\TEMPLE1969\1969CLASS.mp4" type="video/mp4">
+     <button id ="myId" onclick="pauseVid()" type="button"><strong>Pause Video (1969)</strong></button> 
+     <br>   
+    <video poster = "headerPic.jpg" id="myVideo" width="294" height="150" controls>
+     <source src="D:\TEMPLE\templeHigh69.mp4" type="video/mp4">
      <source src="mov_bbb.ogg" type="video/ogg">
      Your browser does not support HTML5 video.
-   </video><br><br><br>
+   </video>
     <p><strong>CLICK HERE for your graduation Year Pictures</strong></p>
    <div id="content" class="myDiv"> 
    <strong>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1972__</a>     
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1971__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1970__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1968__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1967__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1966__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1965__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1964__</a>  
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1963__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1962__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1961__</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1960__</a>  
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">__1959__</a>  
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1972_</a>     
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1971_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1970_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1968_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1967_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1966_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1965_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1964_</a>  
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1963_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1962_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1961_</a>
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1960_</a>  
+     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1959_</a>  
   </div>
   </strong>
-  <br>
-  <p>How may we improve on this site? Send your comments/questions to acgmsg1219@att.net</p>
-  <p>May the Grace of God be with you all! We love you Temple High.</p>  
+   <p>May the Grace of God be with you all! We love you Temple High.</p>  
  
   <script type="text/javascript" src="script.js"></script>
 
