--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </head>
 <body>
   <h1><strong>Temple High Senior's Pictures</strong></h1>
-    <p><strong> Just CLICK on the year you graduated</strong></p><br> 
+    <p><strong> Just CLICK on the year you graduated</strong></p> 
     
      <button id ="myId" onclick="playVid()" type="button"><strong>Play 1969</strong></button>
      <button id ="myId" onclick="pauseVid()" type="button"><strong>Pause Video (1969)</strong></button> 
      <br>   
     <video poster = "headerPic.jpg" id="myVideo" width="294" height="150" controls>
-     <source src="D:\TEMPLE\templeHigh69.mp4" type="video/mp4">
+     <source src="templeHigh69.mp4" type="video/mp4">
      <source src="mov_bbb.ogg" type="video/ogg">
      Your browser does not support HTML5 video.
    </video>
