--- a/index.html
+++ b/index.html
@@ -31,19 +31,20 @@
     <p><strong>CLICK HERE for your graduation Year Pictures</strong></p>
    <div id="content" class="myDiv"> 
    <strong>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1972_</a>     
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1971_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1970_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1968_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1967_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1966_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1965_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1964_</a>  
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1963_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1962_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1961_</a>
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1960_</a>  
-     <a id=aTags href=" https://acggithub.github.io/SHOPPING_LIST/">_1959_</a>  
+      <a id=aTags href=" https://acggithub.github.io/templeHigh72/">_1972_</a>     
+     <a id=aTags href=" https://acggithub.github.io/tempHigh71/">_1971_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh70/">_1970_</a>
+     <a id=aTags href=" https://acggithub.github.io/temptleHigh69/">_1969_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh69/">_1968_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh67/">_1967_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh66/">_1966_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh65/">_1965_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh64/">_1964_</a>  
+     <a id=aTags href=" https://acggithub.github.io/templeHigh63/">_1963_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh1962/">_1962_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh61/">_1961_</a>
+     <a id=aTags href=" https://acggithub.github.io/templeHigh60/">_1960_</a>  
+     <a id=aTags href=" https://acggithub.github.io/templeHigh59/">_1959_</a>  
   </div>
   </strong>
    <p>May the Grace of God be with you all! We love you Temple High.</p>  
